crates/plotnik-lib/tests/snapshots/conformance__duplicate_capture_names_in_node.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (binary_expression (identifier) @x (identifier) @x)))

==== diagnostics ====
error: capture `@x` already defined in this scope
 --> query.ptk:1:71
  |
1 | Q = (program (expression_statement (binary_expression (identifier) @x (identifier) @x)))
  |                                                                       ^^^^^^^^^^^^^^^
